--- a/pageGraphe.css
+++ b/pageGraphe.css
@@ -8,5 +8,7 @@
     left: 0;
     position: fixed;
     background-image: url(data/vagueSeparation3.svg);
-    background-size: contain;
+    background-size: cover;
+    background-repeat: repeat-x;
+    width: 100vw;
 }
