--- a/css/footer.css
+++ b/css/footer.css
@@ -29,7 +29,7 @@ footer {
 }
 
 .separation2 {
-    background-image: url(data/vagueSeparation2.svg);
+    background-image: url(./../data/vagueSeparation2.svg);
     background-color: #ecedd4;
     width: 100%;
     height: 20vh;
@@ -55,4 +55,11 @@ footer {
     min-width: fit-content;
     min-height: fit-content;
     border-radius: 90px;
+    margin: 1vw;
+}
+
+.info div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
