--- a/css/pageGraphe.css
+++ b/css/pageGraphe.css
@@ -3,13 +3,16 @@
     min-height: 40vh;
 }
 
-.separation {
-    top: 15vh;
-    left: 0;
-    position: fixed;
-    background-image: url(./../data/vagueSeparation3.svg);
-    background-size: cover;
-    background-repeat: repeat-x;
-    width: 100vw;
-    height: 5vh;
-}
+
+@media screen and (min-width: 769px)  {  /*ordi*/
+    .separation {
+        top: 15vh;
+        left: 0;
+        position: fixed;
+        background-image: url(./../data/vagueSeparation3.svg);
+        background-size: cover;
+        background-repeat: repeat-x;
+        width: 100vw;
+        height: 5vh;
+    }
+ }
