--- a/css/accueil.css
+++ b/css/accueil.css
@@ -153,5 +153,13 @@
     width: auto;
 }
 
-
+header {
+    width: 100%;
+    min-height: 15vh;
+    display: flex;
+    justify-content: space-around;
+    position: fixed;
+    flex-wrap: wrap;
+    background-color: #204116;
+}
 
