--- a/css/footer.css
+++ b/css/footer.css
@@ -9,6 +9,8 @@
     .info p {
         text-align: center;
     }
+
+    
 }
 
 @media screen and (min-width: 769px)  {  /*ordi*/
@@ -20,7 +22,7 @@
 
 footer {
     width: 100%;
-    height: 20vh;
+    min-height: 20vh;
     background-color: #204116;
     display: flex;
     justify-content: center;
