--- a/css/pageGraphe.css
+++ b/css/pageGraphe.css
@@ -3,16 +3,21 @@
     min-height: 40vh;
 }
 
+ header {
+    width: 100%;
+    min-height: 15vh;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    background-color: #204116;
+}
 
-@media screen and (min-width: 769px)  {  /*ordi*/
-    .separation {
-        top: 15vh;
-        left: 0;
-        position: fixed;
-        background-image: url(./../data/vagueSeparation3.svg);
-        background-size: cover;
-        background-repeat: repeat-x;
-        width: 100vw;
-        height: 5vh;
-    }
- }
+.separation {
+    top: 15vh;
+    left: 0;
+    background-image: url(./../data/vagueSeparation3.svg);
+    background-size: cover;
+    background-repeat: repeat-x;
+    width: 100vw;
+    height: 5vh;
+}
