--- a/css/footer.css
+++ b/css/footer.css
@@ -31,7 +31,7 @@ footer {
 }
 
 .separation2 {
-    background-image: url(./../data/vagueSeparation2.svg);
+    background-image: url(./../image/vagueSeparation2.svg);
     background-color: #ecedd4;
     width: 100%;
     height: 20vh;
